--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/style.css"> -->
     <link rel="stylesheet" href="style.css">
-    <title>תום שנת המס</title>
+    <title>Deloitte's Point of view</title>
+
 </head>
 <body>
 
