--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <!-- <link rel="stylesheet" href="https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/style.css"> -->
     <link rel="stylesheet" href="style.css">
     <title>Deloitte's Point of view</title>
-
 </head>
 <body>
 
 
+
     <section class="hero">
+        <video autoplay muted loop id="myVideo">
+            <source src="https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/pov%20cover.mp4" type="video/mp4">
+        </video>
         <div class="container">
             <div class="responsive-two-column-grid">
                 <div class="hero__img"><img src="./Assets/hero-image.png" alt="hero img"></div>
@@ -79,7 +82,7 @@
     </section>
     <section class="profiles">
         <div class="container">
-            <h2 class="profiles__heading">להיכרות ופגישה עם המומחים, <span>צור קשר</span></h2>
+            <h2 class="profiles__heading">להיכרות ופגישה עם המומחים, <span>צרו קשר</span></h2>
             <div class="responsive-two-column-grid">
                 <div class="profiles__card">
                     <img src="./Assets/אלי-תדהר.png" alt="">
@@ -94,15 +97,7 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-
-
     <script src="./script.js"></script>
     <!-- <script src="https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/script.js"></script> -->
-
 </body>
 </html>
