--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <section class="hero">
-        <video autoplay muted loop id="myVideo">
+        <video playsinline autoplay loop muted id="myVideo">
             <source src="https://www2.deloitte.com/content/dam/html/il/2023/tax-landing-page/pov%20cover.mp4" type="video/mp4">
         </video>
         <div class="container">
