--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <section class="sub-title">
         <div class="container">
-            <h2 class="sub-title__heading">חברות וארגונים רבים נמצאים בימים אלו בתהליך בניית תכניות העבודה. מול אילו הנחות יסוד עליהם לעבוד? כיצד תיראה הכלכלה הישראלית ב-2024/25? ואילו מגמות יניעו את המדינה, החברה והכלכלה לאחר המלחמה. רמות אי הודאות עלו מאד בשנים האחרונות אולם המלחמה הנוכחית בישראל הביאה את רמות אי הודאות לשיא. במחצית הראשונה של נובמבר ביצענו סקר מנהלים שהקיף כ-140 בכירים (יו"ר, מנכ"ל, סמנכ"ל כספים) בחברות מובילות במשק, ועל בסיסו גיבשנו תמונת עתיד לשנתיים הקרובות המבוססת על מתודולוגיה של ניתוח תרחישים.</h2>
+            <h2 class="sub-title__heading">כיצד תיראה הכלכלה הישראלית ב-2024/25? אילו מגמות יניעו את המדינה, החברה והכלכלה לאחר המלחמה? מה ניתן ללמוד ממלחמות העבר ומה חושבים מנהלים במשק על השנתיים הקרובות?</h2>
+            <h2 class="sub-title__heading">במחצית הראשונה של נובמבר ביצענו סקר מנהלים שהקיף כ-140 בכירים (יו"ר, מנכ"ל, סמנכ"ל כספים) בחברות מובילות במשק, ועל בסיסו גיבשנו תמונת עתיד לשנתיים הקרובות המבוססת על מתודולוגיה של ניתוח תרחישים.</h2>
         </div>
     </section>
 
@@ -40,10 +41,10 @@
         <div class="container">
             <div class="video__card--fullwidth">
                 <iframe width="100%" height="350" src="https://www.youtube.com/embed/4gU9SUVPwvc?si=4oDflKPbp3Qt9fSu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h3>חלק א' – ניתוח תרחישים</h3>
-                <p>בחלק הראשון של הסקר בחנו מה חושבים המנהלים על תקופת הלחימה עצמה. תקופת הלחימה, הוגדרה בסקר כתקופה שעד לחזרה מסיבית של המילואים ולהסרה של האיום על העורף.</p>
+                <h3><span>חלק א'</span> – כלכלת מלחמה וניתוח תרחישים</h3>
+                <p>אי הודאות השוררת במשק, מקשה מאד על בניית תמונה לישראל 2024. לפיכך, כינסנו אצלנו צוות חשיבה שבנה את תמונת העתיד בגישה של "תרחישים". שימוש במתודולוגיה של ניתוח תרחישים מבוסס על זיהוי שני צירים מרכזיים אשר יוצרים למעשה ארבעה תרחישים – או מצבי עולם עתידיים, השונים זה מזה בתכלית שחשוב להבין את המשמעויות שלהם לחברה ולבנות כלי התמודדות מתאימים.</p>
             </div>
-            <div class="responsive-two-column-grid">
+            <!-- <div class="responsive-two-column-grid">
                 <div class="video__card">
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/4gU9SUVPwvc?si=4oDflKPbp3Qt9fSu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     <h3>חלק א' – ניתוח תרחישים</h3>
@@ -54,7 +55,7 @@
                     <h3>חלק א' – ניתוח תרחישים</h3>
                     <p>בחלק הראשון של הסקר בחנו מה חושבים המנהלים על תקופת הלחימה עצמה. תקופת הלחימה, הוגדרה בסקר כתקופה שעד לחזרה מסיבית של המילואים ולהסרה של האיום על העורף.</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -62,37 +63,42 @@
         <div class="container">
             <h2 class="articles__heading"><span>נקודת </span>מבט נוספת </h2>
             <div class="responsive-three-columns">
-                <div class="articles__card">
-                    <img class="articles__img" src="./Assets/Picture3.jpg" alt="">
-                    <h4>כותרת הפודקאסט</h4>
-                    <p>כאן יבוא מלל מהפודקאסט ישירות</p>
-                </div>
-                <div  class="articles__card">
-                    <img class="articles__img" src="./Assets/Picture2.jpg" alt="">
-                    <h4>כותרת המאמר</h4>
-                    <p>כאן יבוא מלל מהפודקאסט ישירות</p>
-                </div>
-                <div class="articles__card">
-                    <img class="articles__img" src="./Assets/Picture1.jpg" alt="">
-                    <h4>כותרת המאמר</h4>
-                    <p>כאן יבוא מלל מהפודקאסט ישירות</p>
-                </div>
+                <a target="_blank" href="https://open.spotify.com/episode/4Vtw5hROWfoA5SL1qxGUPC?si=QyGTIqZIRnaBEDH6gNgezw&nd=1&dlsi=5757cc1d2e9c4312">
+
+                    <div class="articles__card">
+                        <img class="articles__img" src="./Assets/Picture3.jpg" alt="">
+                        <h4>האם בנק ישראל ומשרד האוצר אופטימיים מידי?</h4>
+                    </div>
+                </a>
+                <a target="_blank" href="https://www.globes.co.il/news/article.aspx?did=1001465647">
+                    <div  class="articles__card">
+                        <img class="articles__img" src="./Assets/Picture2.jpg" alt="">
+                        <h4>על ציפיות המנהלים הישראלים מהכלכלה ביום שאחרי המלחמה</h4>
+                    </div>
+                </a>
+                <a target="_blank" href="https://www.mako.co.il/finances-magazine/Article-6156bed9b636c81026.htm">
+                    <div class="articles__card">
+                        <img class="articles__img" src="./Assets/Picture1.jpg" alt="">
+                        <h4>והרי התחזית לשנת 2024: איך תיראה השנה הבאה במשק הישראלי?</h4>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
     <section class="profiles">
         <div class="container">
-            <h2 class="profiles__heading">להיכרות ופגישה עם המומחים, <span>צרו קשר</span></h2>
+            <h2 class="profiles__heading"><span>כיצד</span> זה משפיע על העסק שלך?</h2>
+            <p class="profiles__sub-heading">המומחים שלנו עומדים לרשותך וישמחו לסייע</p>
             <div class="responsive-two-column-grid">
                 <div class="profiles__card">
                     <img src="./Assets/אלי-תדהר.png" alt="">
                     <h5>אלי תדהר</h5>
-                    <p>שותף, מוביל Monitor Deloitte, ראש מגזר תעשייה מוצרי צריכה, האנרגיה והמשאבים</p>
+                    <p>שותף, מוביל Monitor Deloitte, ראש מגזר תעשייה מוצרי צריכה, האנרגיה והמשאבים</p> 
                 </div>
                 <div class="profiles__card">
                     <img src="./Assets//שלי-תשובה.png" alt="">
-                    <h5>אלי תדהר</h5>
-                    <p>שותף, מוביל Monitor Deloitte, ראש מגזר תעשייה מוצרי צריכה, האנרגיה והמשאבים</p>
+                    <h5>שלי תשובה</h5>
+                    <p>שותף, Monitor Deloitte וראש המגזר הפיננסי</p>
                 </div>
             </div>
         </div>
