Update index.html mail to

--- a/index.html
+++ b/index.html
@@ -90,16 +90,21 @@
             <h2 class="profiles__heading"><span>כיצד</span> זה משפיע על העסק שלך?</h2>
             <p class="profiles__sub-heading">המומחים שלנו עומדים לרשותך וישמחו לסייע</p>
             <div class="responsive-two-column-grid">
-                <div class="profiles__card">
-                    <img src="./Assets/אלי-תדהר.png" alt="">
-                    <h5>אלי תדהר</h5>
-                    <p>שותף, מוביל Monitor Deloitte, ראש מגזר תעשייה מוצרי צריכה, האנרגיה והמשאבים</p> 
-                </div>
-                <div class="profiles__card">
-                    <img src="./Assets//שלי-תשובה.png" alt="">
-                    <h5>שלי תשובה</h5>
-                    <p>שותף, Monitor Deloitte וראש המגזר הפיננסי</p>
-                </div>
+                <a href="mailto:etidhar@deloitte.co.il">
+                    <div class="profiles__card">
+                        <img src="./Assets/אלי-תדהר.png" alt="">
+                        <h5>אלי תדהר</h5>
+                        <p>שותף, מוביל Monitor Deloitte, ראש מגזר תעשייה מוצרי צריכה, האנרגיה והמשאבים</p> 
+                    </div>
+                </a>
+
+                <a href="mailto:stshuva@deloitte.co.il">
+                    <div class="profiles__card">
+                        <img src="./Assets//שלי-תשובה.png" alt="">
+                        <h5>שלי תשובה</h5>
+                        <p>שותף, Monitor Deloitte וראש המגזר הפיננסי</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
